added Spark papers

--- a/doc/users/references.bib
+++ b/doc/users/references.bib
@@ -1,3 +1,14 @@
+@string{lnai = {{Lecture Notes in Artificial Intelligence}}}
+@string{lncs = {{Lecture Notes in Computer Science}}}
+@string{rc00 = {{RoboCup 2000: Robot Soccer World Cup~IV}}}
+@string{rc01 = {{RoboCup 2001: Robot Soccer World Cup~V}}}
+@string{rc02 = {{RoboCup 2002: Robot Soccer World Cup~VI}}}
+@string{rc03 = {{RoboCup 2003: Robot Soccer World Cup~VII}}}
+@string{rc04 = {{RoboCup 2004: Robot Soccer World Cup~VIII}}}
+@string{rc05 = {{RoboCup 2005: Robot Soccer World Cup~IX}}}
+@string{rc06 = {{RoboCup 2006: Robot Soccer World Cup~X}}}
+@string{rc99 = {{RoboCup-99: Robot Soccer World Cup~III}}}
+
 @Article{ODEManual, 
   title =     " Open Dynamics Engine v0.5 User Guide", 
   author =    "Russell Smith", 
@@ -22,3 +33,35 @@
 }
 
 
+
+@article{OR05,
+	Author = {Oliver Obst and Markus Rollmann},
+	Journal = {Computer Systems Science and Engineering},
+	Month = Sep,
+	Number = {5},
+	Pages = {347--356},
+	Title = {{SPARK} -- {A} {G}eneric {S}imulator for {P}hysical {M}ultiagent {S}imulations},
+	Volume = {20},
+	Year = 2005,
+	Abstract = {We describe a new multi-agent simulation system, called Spark, for agents in three-dimensional environments. Our goal in creating Spark was to provide a high degree of flexibility for creating new types of simulations. We implemented a flexible application framework and exhausted the idea of replaceable components in the resulting system. In comparison to specialized simulators, users can effortlessly create new simulations by using a scene description language. 
+Spark is a powerful tool to state different multi-agent research questions. It was already used as official simulator for the first three-dimensional RoboCup Simulation League competition.},
+}
+
+
+@incollection{KO04,
+	Address = {Berlin, Heidelberg, New York},
+	Author = {Marco K{\"o}gler and Oliver Obst},
+	Booktitle = rc03,
+	Date-Added = {2008-01-29 17:28:53 +1100},
+	Date-Modified = {2008-02-04 16:13:39 +1100},
+	Editor = {Daniel Polani and Andrea Bonarini and Brett Browning and Kazuo Yoshida},
+	Pages = {458 -- 469},
+	Publisher = {Springer},
+	Series = lnai,
+	Title = {Simulation League: The Next Generation},
+	Volume = 3020,
+	Wwwnote = {<a href="http://www.uni-koblenz.de/fb4/publikationen/gelbereihe/RR-3-2003.pdf">Extended&nbsp;version</a> appeared as Fachberichte Informatik 3/2003, Universit{\"a}t Koblenz-Landau.},
+	Year = 2004,
+	Abstract = { We present a modular approach to model multi-agent simulations in 3D environments. Using this approach, we implemented a generic simulator which is totally decoupled from the actual simulation it performs. We believe that for Soccer Simulation League a transition to 3D states exiting new research problems and equally makes it more attractive to watch for spectators. We are proposing to use our framework as basis for a next generation Soccer Server. 
+},
+}
