*** empty log message ***

--- a/doc/users/introduction.tex
+++ b/doc/users/introduction.tex
@@ -37,16 +37,14 @@ champion of the most recent World Cup.
 
 On the RoboCup 2003 Symposium therefore, a new approach to a
 three-dimensional physically realistic soccer simulation was
-proposed. In a road map discussion for the Soccer Simulation League on
+proposed~\cite{KO04}. In a road map discussion for the Soccer Simulation League on
 RoboCup 2003, the participants decided on adding the three-dimensional
 simulation to the competitions.
-
-%Reference Marcos Thesis as the basis for the initial server development
 
 For RoboCup 2004, SimSpark was successfully used for the the first
 official competition in RoboCup Simulation League 3D.  The soccer
 simulation for this tournament was developed in parallel with the
-SimSpark simulator. In its' initial version players were modeled as
+SimSpark simulator. In its initial version players were modeled as
 spheres in a physical three dimensional world. Since then SimSpark
 grew even more feature and now supports humanoid players with
 articulated bodies.
@@ -56,7 +54,7 @@ new features that were added to the simulator during
 development. However changes to the simulator core were never
 customized for the soccer simulation. Instead we implemented generic
 simulator services and contained all soccer specific details are in a
-set of plugins.
+set of plugins (see \cite{OR05}).
 
 \section{About this Manual}
 
