--- a/doc/users/references.bib
+++ b/doc/users/references.bib
@@ -9,30 +9,34 @@
 @string{rc06 = {{RoboCup 2006: Robot Soccer World Cup~X}}}
 @string{rc99 = {{RoboCup-99: Robot Soccer World Cup~III}}}
 
-@Article{ODEManual, 
-  title =     " Open Dynamics Engine v0.5 User Guide", 
-  author =    "Russell Smith", 
-  journal =   "http://ode.org/ode-latest-userguide.html",
-  year =  2006,
+
+@Manual{ODEManual,
+  title = 	 {Open Dynamics Engine v0.5 User Guide},
+  author =	 {Russell Smith},
+  year =	 2006,
+  annote =	 {http://ode.org/ode-latest-userguide.html}
 }
 
-@BOOK{SchillingJ,
-  title = {Erstellen eines Basis-Agenten zur Kommunikation mit dem RoboCup3D Soccer Server},
-  publisher = {Bachelor thesis, Hochschule Offenburg},
-  year = {2008},
-  author = {{Schilling}, J. },
-  address = {Offenburg},
+
+@TechReport{SchillingJ,
+  author = 	 {J. Schilling},
+  title = 	 {{E}rstellen eines {B}asis-{A}genten zur {K}ommunikation mit dem {RoboCup3D} {S}occer {S}erver},
+  institution =  {Hochschule Offenburg},
+  year = 	 2008,
+  type =         {Bachelor's thesis},
+  address =	 {Offenburg},
+  note =	 {(in German)}
 }
 
-@BOOK{Lekavy,
-  title = {RoboCup – tretí rozmer},
-  publisher = {Project report, Slovenská technická univerzita v Bratislave},
-  year = {2007},
+@TechReport{Lekavy,
   author = {{Lekavý} et al , M.},
+  title = {RoboCup – tretí rozmer},
+  institution = {Slovenská technická univerzita v Bratislave},
+  type =  {Project report},
+  year = {2007},
   address = {Bratislava},
+  note = {(in Slovak)}
 }
-
-
 
 @article{OR05,
 	Author = {Oliver Obst and Markus Rollmann},
@@ -52,8 +56,6 @@ Spark is a powerful tool to state different multi-agent research questions. It w
 	Address = {Berlin, Heidelberg, New York},
 	Author = {Marco K{\"o}gler and Oliver Obst},
 	Booktitle = rc03,
-	Date-Added = {2008-01-29 17:28:53 +1100},
-	Date-Modified = {2008-02-04 16:13:39 +1100},
 	Editor = {Daniel Polani and Andrea Bonarini and Brett Browning and Kazuo Yoshida},
 	Pages = {458 -- 469},
 	Publisher = {Springer},
@@ -64,4 +66,16 @@ Spark is a powerful tool to state different multi-agent research questions. It w
 	Year = 2004,
 	Abstract = { We present a modular approach to model multi-agent simulations in 3D environments. Using this approach, we implemented a generic simulator which is totally decoupled from the actual simulation it performs. We believe that for Soccer Simulation League a transition to 3D states exiting new research problems and equally makes it more attractive to watch for spectators. We are proposing to use our framework as basis for a next generation Soccer Server. 
 },
+}
+
+@book{Obst07,
+	Author = {Oliver Obst},
+	Note = {ISBN 978-1-58603-705-5.},
+	Number = {304},
+	Publisher = {Aka / IOS Press},
+	Series = {DISKI -- Dissertations in Artificial Intelligence},
+	Title = {Controlling Physical Multiagent Teams: Getting League-Independent Results from RoboCup Soccer},
+	Url = {http://tinyurl.com/24vxlh/},
+	Wwwnote = {You can <a href="http://tinyurl.com/24vxlh">buy the book at Amazon</a>.},
+	Year = {2007},
 }
