--- a/ChangeLog
+++ b/ChangeLog
@@ -1,23 +1,35 @@
+2008-03-11  Joschka Boedecker  <jboedeck@uni-koblenz.de>
+
+	* app/agentspark/soccerbotbehavior.cpp:
+	- changed behavior to load the new soccerbotcomp.rsg file by default
+
+	* app/rcssmonitor/lite/glserver.cpp,
+	* app/rcssmonitor/lite/monitor.cpp:
+	- added #ifdef for GLUT includes on the Mac
+
+	* app/simspark/rsg/agent/soccerbotcomp.rsg:
+	- added hear perceptor and say effector
+
 2008-03-11  Sander van Dijk  <sgvandijk@gmail.com>
 
-  * acinclude.m4
-  - improved ruby library detection through ruby configuration
+	* acinclude.m4
+	- improved ruby library detection through ruby configuration
   
-  * lib/zeitgeist/leaf.h
-  - added (Leaf::ListShallowChildrenSupportingClass)
+	* lib/zeitgeist/leaf.h
+	- added (Leaf::ListShallowChildrenSupportingClass)
   
-  * lib/oxygen/physicsserver/body.h
-  * lib/oxygen/physicsserver/body.cpp
-  - composite bodies' mass is positioned correctly in (Body::AddMass), their
-    colliders and sibling/descendant transforms are positioned correctly in
-    (Body::PrePhysicsUpdateInternal)
+	* lib/oxygen/physicsserver/body.h
+	* lib/oxygen/physicsserver/body.cpp
+	- composite bodies' mass is positioned correctly in (Body::AddMass), their
+	  colliders and sibling/descendant transforms are positioned correctly in
+	  (Body::PrePhysicsUpdateInternal)
   
-  * plugin/soccer/agentstate/agentstate.cpp
-  * plugin/soccer/agentstate/agentstate.h
-  * plugin/soccer/gamestateaspect/gamestateaspect.cpp
-  * plugin/soccer/gamestateaspect/gamestateaspect.h
-  - when agent disconnects, his uniform number is freed so it can be used again
-    by a new agent
+	* plugin/soccer/agentstate/agentstate.cpp
+	* plugin/soccer/agentstate/agentstate.h
+	* plugin/soccer/gamestateaspect/gamestateaspect.cpp
+	* plugin/soccer/gamestateaspect/gamestateaspect.h
+	- when agent disconnects, his uniform number is freed so it can be used again
+	  by a new agent
     
 2008-03-08  Hedayat Vatankhah  <hedayat@grad.com>
 
