proofread, corrected minor typos

--- a/doc/users/introduction.tex
+++ b/doc/users/introduction.tex
@@ -1,6 +1,6 @@
 \chapter{Introduction}
 
-\section{What is Simspark?}
+\section{What is SimSpark?}
 
 SimSpark is a multi-agent simulation system for agents in
 three-dimensional environments. Its goal is to provide a high degree
@@ -26,35 +26,35 @@ integrated project-oriented education.
 For this purpose, RoboCup chose to use soccer game as a primary
 domain, and organizes competitive RoboCups. The simulation league is
 one of several leagues where the entire soccer game takes places in a
-simulated environment. SimSparks two dimensional predecessor
+simulated environment. SimSpark's two dimensional predecessor
 simulation models the players and the ball as flat spheres. It further
 lacks a realistic physical environment.
 
 As one of the long term goals of the soccer simulation is to aim for
 realism the long term objective are realistic humanoid players in a
-physical environment. These player should one day challenge the
+physical environment. These players should one day challenge the
 champion of the most recent World Cup.
 
-On the RoboCup 2003 Symposium therefore, a new approach to a
+Therefore, on the RoboCup 2003 Symposium a new approach to a
 three-dimensional physically realistic soccer simulation was
 proposed~\cite{KO04}. In a road map discussion for the Soccer Simulation League on
 RoboCup 2003, the participants decided on adding the three-dimensional
 simulation to the competitions.
 
-For RoboCup 2004, SimSpark was successfully used for the the first
+For RoboCup 2004, SimSpark was successfully used for the first
 official competition in RoboCup Simulation League 3D.  The soccer
 simulation for this tournament was developed in parallel with the
 SimSpark simulator. In its initial version players were modeled as
 spheres in a physical three dimensional world. Since then SimSpark
-grew even more feature and now supports humanoid players with
+grew considerably and now supports humanoid players with
 articulated bodies.
 
-It served from the beginning as a testbed and a guide for essential
+It served from the beginning as a test bed and a guide for essential
 new features that were added to the simulator during
 development. However changes to the simulator core were never
-customized for the soccer simulation. Instead we implemented generic
-simulator services and contained all soccer specific details are in a
-set of plugins (see \cite{OR05}).
+customized for the soccer simulation. Instead generic
+simulator services were implemented with all soccer specific
+details contained in a set of plugins (see \cite{OR05}).
 
 \section{About this Manual}
 
