changed setup for the hyperref package (get rid of boxes around links)

--- a/doc/devel/definitions.tex
+++ b/doc/devel/definitions.tex
@@ -17,6 +17,14 @@
 \usepackage{charter}
 \usepackage[british]{babel}
 \usepackage{hyperref}
+\hypersetup{
+  colorlinks,%
+  citecolor=blue,%
+  filecolor=black,%
+  linkcolor=black,%
+  urlcolor=black,%
+  pdftex=true,%
+  breaklinks=true}
 \usepackage{listings}
 \lstset{language=bash,basicstyle=\small,breaklines=false}
 \usepackage{subfigure}
