--- a/doc/users/references.bib
+++ b/doc/users/references.bib
@@ -17,7 +17,6 @@
   annote =	 {http://ode.org/ode-latest-userguide.html}
 }
 
-
 @TechReport{SchillingJ,
   author = 	 {J. Schilling},
   title = 	 {{E}rstellen eines {B}asis-{A}genten zur {K}ommunikation mit dem {RoboCup3D} {S}occer {S}erver},
@@ -78,4 +77,72 @@ Spark is a powerful tool to state different multi-agent research questions. It w
 	Url = {http://tinyurl.com/24vxlh/},
 	Wwwnote = {You can <a href="http://tinyurl.com/24vxlh">buy the book at Amazon</a>.},
 	Year = {2007},
+}
+
+@MastersThesis{Boedecker06,
+  author = 	 {Joschka B{\"o}decker},
+  title = 	 {Humanoid Robot Simulation and Walking Controller Development in the Spark Simulator Framework},
+  school = 	 {Universit{\"a}t Koblenz-Landau},
+  year = 	 2006}
+
+@MastersThesis{Rollmann04,
+  author = 	 {Markus Rollmann},
+  title = 	 {Spark -- Generic Building Blocks for Physical Multi-agent Simulations},
+  school = 	 {Universit{\"a}t Koblenz-Landau},
+  year = 	 2004}
+
+@MastersThesis{Koegler03,
+  author = 	 {Marco K{\"o}gler},
+  title = 	 {Simulation and Visualization of Agents in 3D Environments},
+  school = 	 {Universit{\"a}t Koblenz-Landau},
+  year = 	 2003}
+
+@MastersThesis{Vorst06,
+  author = 	 {Philipp Vorst},
+  title = 	 {ReadyLog Agents for the RoboCup 3D Soccer Simulation League},
+  school = 	 {RWTH Aachen},
+  year = 	 2006}
+
+@InProceedings{BMO+05,
+  author       = {Joschka Boedecker and Norbert Michael Mayer and 
+                 Masaki Ogino and Rodrigo da Silva Guerra and Masaki Kikuchi 
+                 and Minoru Asada},
+  title        = {{G}etting closer: {H}ow {S}imulation and {H}umanoid {L}eague can 
+                 benefit from each other},
+  booktitle    = {Proceedings of the 3rd International Symposium on Autonomous
+                 Minirobots for Research and Edutainment},
+  year         = 2005,
+  editor       = {Kazuyuki Murase and Kosuke Sekiyama and Naoyuki Kubota and 
+                 Tomohide Naniwa and Joaquin Sitte},
+  publisher    = {Springer}
+}
+
+@InProceedings{MBS+07,
+  author	= {Norbert Michael Mayer and Joschka Boedecker and Rodrigo da Silva Guerra and Minoru Asada},
+  title		= {3{D}2{R}eal: {S}imulation {L}eague {F}inals in {R}eal {R}obots},
+  booktitle	= {RoboCup 2006: Robot Soccer World Cup~X},
+  year		= 2007,
+  editor	= {Gerhard Lakemeyer and Elizabeth Sklar and Domenico G. Sorrenti and Tomoichi Takahashi},
+  series        = {Lecture Notes in Artificial Intelligence},
+  publisher     = {Springer}
+}
+
+@Article{KAK+97,
+  author = 	 {H. Kitano and M. Asada and Y. Kuniyoshi and I. Noda and E. Osawa and H. Matsubara},
+  title = 	 {Robo{C}up: {A} {C}hallenge {AI} {P}roblem},
+  journal = 	 {AI Magazine},
+  year = 	 1997,
+  volume =       18,
+  number =       1,
+  pages =        {73-85}
+}
+
+@Article{KA00,
+  author = 	 {H. Kitano and M. Asada},
+  title = 	 {The {R}oboCup humanoid challenge as the millennium challenge for advanced robotics},
+  journal = 	 {Advanced Robotics},
+  year = 	 2000,
+  volume =	 13,
+  number =	 8,
+  pages =	 {723-736}
 }
