added more information to the thesis section

--- a/doc/users/resources.tex
+++ b/doc/users/resources.tex
@@ -22,8 +22,13 @@ sserver-three-d@lists.sourceforge.net
 
 \section{Thesis and Papers}
 
-\url{http://www.uni-koblenz.de/~fruit/ftp/teaching/koe03-diplomarbeit.pdf}\\
-\url{http://www.uni-koblenz.de/~fruit/ftp/teaching/rol04-diplomarbeit.pdf}
+\begin{itemize}
+\item Marco Koegler's master's thesis \cite{Koegler03}
+\item Markus Rollmann's master's thesis \cite{Rollmann04}
+\item Philipp Vorst's master's thesis \cite{Vorst06}.
+\item Joschka Boedecker's master's thesis \cite{Boedecker06}.
+\item Oliver Obst's doctoral dissertation \cite{Obst07}.
+\end{itemize}
 
 \section{How to contribute?}
 
