*** empty log message ***

--- a/doc/users/references.bib
+++ b/doc/users/references.bib
@@ -118,7 +118,7 @@ Spark is a powerful tool to state different multi-agent research questions. It w
 }
 
 @InProceedings{MBS+07,
-  author	= {Norbert Michael Mayer and Joschka Boedecker and Rodrigo da Silva Guerra and and Oliver Obst and Minoru Asada},
+  author	= {Norbert Michael Mayer and Joschka Boedecker and Rodrigo da Silva Guerra and Oliver Obst and Minoru Asada},
   title		= {3{D}2{R}eal: {S}imulation {L}eague {F}inals in {R}eal {R}obots},
   booktitle	= {RoboCup 2006: Robot Soccer World Cup~X},
   year		= 2007,
